# crypto-backtest-engine-v3

./: README.md  docker-compose.yml  railway.json  vercel.json
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/alerts/: __init__.py  discord.py  telegram.py
backend/app/api/: __init__.py  _common.py  backtests.py  data.py  insights.py  schemas.py  strategies.py  strategy_submission.py
backend/app/core/: __init__.py  cache.py  config.py
backend/app/data/: __init__.py  loader.py
backend/app/data/providers/: __init__.py  alternative_me.py  binance.py  bitget.py  bitget_sentiment.py  coingecko.py  cryptopanic.py  defillama.py  geckoterminal.py
backend/app/db/: __init__.py  client.py  schema.sql
backend/app/engine/: __init__.py  backtest.py  metrics.py
backend/app/indicators/: __init__.py  core.py
backend/app/insights/: __init__.py  generator.py
backend/app/optimization/: __init__.py  grid_search.py
backend/app/strategies/: __init__.py  ai_scoring.py  base.py  ema_cross.py  rsi_meanrev.py
backend/app/trading/: __init__.py  base.py  bitget_live.py  paper.py
backend/scripts/: run_demo.py
backend/tests/: conftest.py  test_engine.py  test_indicators.py  test_metrics.py
data/: README.md  btcusdt_1d.csv
frontend/: Dockerfile  next.config.js  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: MetricsTable.tsx  StrategyBuilder.tsx  TradeTable.tsx
frontend/lib/: api.ts  utils.ts
output/demo/: equity.csv  metrics.json  signals.csv  trades.csv
(+9 files in other folders)
